--- a/CSS/style.css
+++ b/CSS/style.css
@@ -63,6 +63,14 @@ button:active {
     background-color: #2C3639;
 }
 
-img {
-    padding: 50px 100px;
+img.tengah {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media screen and (max-width: 1000px) {
+    header {
+        color: black
+    }
 }
